# Re-NNDD

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts
.claude/skills/run-re-nndd/: SKILL.md  driver.mjs
.github/: typos.toml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  e2e.yml  pages.yml  security.yml
docs/: index.html  plugins.md
docs/test-lists/: phase-1-9-comment-burnin.md
examples/plugins/hello-world/: index.js  manifest.json
examples/plugins/play-stats/: index.js  manifest.json
scripts/burnin-verify/: verify.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/api/: auth.rs  search.rs  video.rs
src-tauri/src/downloader/: burnin.rs  comment_ass.rs  hls.rs  mux.rs
src-tauri/src/plugins/: commands.rs  dispatcher.rs  installer.rs  manifest.rs  mod.rs  registry.rs  runtime.rs
src-tauri/tests/: api_search.rs
src/lib/: CommandPalette.svelte  MylistAddButton.svelte  QueueBanner.svelte  RankingNgPanel.svelte  SearchHitCard.svelte  Toast.svelte  VideoActionMenu.svelte  api.ts  commandPalette.svelte.ts  commandPalette.test.ts  commandPaletteStore.test.ts  rankingTags.ts  relatedVideos.ts  thumbnail.test.ts  thumbnail.ts  toastStore.svelte.ts  toastStore.test.ts
src/lib/burnin/: browser.ts  core.test.ts  core.ts  exportState.svelte.ts
src/lib/player/: CommentLayer.svelte  CommentList.svelte  ControlBar.svelte  MiniPlayer.svelte  Player.svelte  miniPlayerStore.svelte.ts  shortcuts.ts  tauriHlsLoader.ts  volumePersistence.test.ts  volumePersistence.ts
src/lib/plugins/: api.ts  eventBus.test.ts  eventBus.ts  host.test.ts  host.ts  loader.test.ts  loader.ts  pages.test.ts  playerState.svelte.ts  playerState.test.ts  registry.test.ts  registry.ts  types.ts
src/lib/stores/: listenerRegistry.ts  mylists.ts  ngRules.test.ts  ngRules.ts  playbackQueue.test.ts  playbackQueue.ts  searchState.ts  settings.svelte.test.ts  settings.svelte.ts  smartPlaylists.test.ts  smartPlaylists.ts
src/routes/: +layout.svelte
src/routes/downloads/: +page.svelte
src/routes/history/: +page.svelte
src/routes/ng/: +page.svelte
src/routes/playlists/: +page.svelte
src/routes/playlists/smart/[id]/: +page.svelte
src/routes/plugin/[id]/[...path]/: +page.svelte
src/routes/ranking/: +page.svelte
src/routes/search/: +page.svelte
src/routes/series/[id]/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/user/: userTabLoad.svelte.test.ts
src/routes/user/[id]/: +page.svelte
src/routes/video/[id]/: +page.svelte
tests/e2e/: app.test.mjs  downloads.spec.ts  driver.mjs  home.spec.ts  navigation.spec.ts  ng.spec.ts  ranking.spec.ts  search.spec.ts  settings.spec.ts
tests/e2e/helpers/: tauri-mock.ts
